--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.1.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
     "react-router-dom": "^6.3.0",
